--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
 wheel>=0.22
+pandas
+matplotlib
+numpy
+seaborn
+git+https://github.com/jyesselm/dreem.git
+git+https://github.com/YesselmanLab/rna_library.git
